--- a/contac.html
+++ b/contac.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BE SMART</title>
+	<title>CONTAC</title>
 	<link rel="stylesheet" type="text/css" href="on.css">
 </head>
 <body>
