--- a/list.html
+++ b/list.html
@@ -6,20 +6,20 @@
 </head>
 <body>
 
-<h1>BE SMART</h1>
-<H2>Education For Everyone</H2>
+<h1 id="tg">BE SMART</h1>
+<H2 id="tg">Education For Everyone</H2>
 
 <ul>
 	<li>
-		<a href="">HOME</a>
+		<a href="home.html">HOME</a>
 	</li>
 
 	<LI>
-		<a href="">LIST</a>
+		<a href="list.html">LIST</a>
 	</LI>
 
 	<li>
-		<a href="">CONTAC</a>
+		<a href="contac.html">CONTAC</a>
 	</li>
 
 	<li>
@@ -30,6 +30,37 @@
 		<a href="">REGISTRASI</a>
 	</li>
 </ul>
+
+<h2 class="ad">Pilih Apa Yang Ingin Kalian Pelajari</h2>
+
+<table>
+	<tr>
+		<th><img src="gmbr/tk.png" height="200" width="200"></th>
+		<th width="100%"><a href="" class="tk">Taman Kanak-Kanak</a>
+			<p>mencakup seluruh yang di butuhkan bagi anak-anak usia dini</p>
+		</th>
+	</tr>
+	<tr>
+		<th><img src="gmbr/sd.jpg" height="200" width="200"></th>
+		<th width="100%">
+			<a href="" class="tk">Sekolah Dasar</a>
+			<p>seluruh mata pelajaran yang akan di sesuaikan dengan sekolah dasar</p>
+		</th>
+	</tr>
+	<tr>
+		<th><img src="gmbr/smp.png" height="200" width="200"></th>
+		<th width="100%"><a href="" class="tk">Sekolah Menengah Pertama</a>
+			<p>seluruh mata pelajaran yang akan di sesuaikan dengan SMP</p>
+		</th>
+	</tr>
+	<tr>
+		<th><img src="gmbr/sma.png" height="200" width="200"></th>
+		<th width="100%">
+			<a href="" class="tk">Sekolah Menengah Atas</a>
+			<p>seluruh mata pelajaran yang akan di sesuaikan dengan SMA</p>
+		</th>
+	</tr>
+</table>
 
 </body>
 </html>
