--- a/contac.html
+++ b/contac.html
@@ -31,5 +31,15 @@
 	</li>
 </ul>
 
+
+
+
+<div class="dv">
+	<p>Be Smart for everyone</p>
+	<a href="" id="wr">help</a>
+	<a href="" id="wr">lapor admin</a>
+	<a href="" id="wr">tentang kami</a>
+</div>
+
 </body>
 </html>
