--- a/home.html
+++ b/home.html
@@ -31,5 +31,31 @@
 	</li>
 </ul>
 
+<div id="header">
+	<h1>Be Smart</h1>
+</div>
+
+<div id="nav">
+	<p>PENDIRI</p>
+	Dwisyal<br>
+	Apolos<br>
+	Uswatun<br>
+	Danang<br>
+	Haris<br>
+</div>
+
+<div id="section">
+	<h2 id="tg">PEMBERITAHUAN</h2>
+	<p id="tg">Be Smart adalah web berbasis pembelajaran, yang bisa di gunakan baik itu anak kecil maupun orang dewasa.</p>
+	<p id="tg">Pada dasarnya web ini di buat khusus bagi semua orang baik itu orang yang normal ataupun yang tidak normal yang ingin mencari ilmu untuk menambah wawasan.</p>
+</div>
+
+<div class="dv">
+	<p>Be Smart for everyone</p>
+	<a href="" id="wr">help</a>
+	<a href="" id="wr">lapor admin</a>
+	<a href="" id="wr">tentang kami</a>
+</div>
+
 </body>
 </html>
