--- a/list.html
+++ b/list.html
@@ -62,5 +62,12 @@
 	</tr>
 </table>
 
+<div class="dv">
+	<p>Be Smart for everyone</p>
+	<a href="" id="wr">help</a>
+	<a href="" id="wr">lapor admin</a>
+	<a href="" id="wr">tentang kami</a>
+</div>
+
 </body>
 </html>
