--- a/home.html
+++ b/home.html
@@ -50,6 +50,10 @@
 	<p id="tg">Pada dasarnya web ini di buat khusus bagi semua orang baik itu orang yang normal ataupun yang tidak normal yang ingin mencari ilmu untuk menambah wawasan.</p>
 </div>
 
+<div id="section">
+	<img src="gmbr/dw.jpg" height="280px" alt="dwisyal">
+</div>
+
 <div class="dv">
 	<p>Be Smart for everyone</p>
 	<a href="" id="wr">help</a>
