--- a/list.html
+++ b/list.html
@@ -19,7 +19,7 @@
 	</LI>
 
 	<li>
-		<a href="contac.html">CONTAC</a>
+		<a href="contac.html">CONTACT</a>
 	</li>
 
 	<li>
@@ -64,7 +64,7 @@
 
 <div class="dv">
 	<p>Be Smart for everyone</p>
-	<a href="" id="wr">help</a>
+	<a href="panduan.html" id="wr">panduan</a>
 	<a href="" id="wr">lapor admin</a>
 	<a href="" id="wr">tentang kami</a>
 </div>
