--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 	</li>
 
 	<li>
-		<a href="">PENCARIAN</a>
+		<a href="pencarian.html">PENCARIAN</a>
 	</li>
 
 	<li>
@@ -44,21 +44,34 @@
 	Haris<br>
 </div>
 
-<div id="section">
+<div id="section" style="width: 400px; ">
 	<h2 id="tg">PEMBERITAHUAN</h2>
 	<p id="tg">Be Smart adalah web berbasis pembelajaran, yang bisa di gunakan baik itu anak kecil maupun orang dewasa.</p>
 	<p id="tg">Pada dasarnya web ini di buat khusus bagi semua orang baik itu orang yang normal ataupun yang tidak normal yang ingin mencari ilmu untuk menambah wawasan.</p>
 </div>
 
 <div id="section">
-	<img src="gmbr/dw.jpg" height="280px" alt="dwisyal">
+	<img src="gmbr/dw.jpg" height="80px" alt="dwisyal">
 </div>
+<div id="section" style="float: right;">
+	<img src="gmbr/ap.jpg" height="80px" alt="apolos">
+</div>
+<div id="section">
+	<img src="gmbr/uswa.jpg" height="80px" alt="uswatun">
+</div>
+<div id="section" style="float: right;">
+	<img src="gmbr/da.jpg" height="80px" alt="danang">
+</div>
+<div id="section" style="float: right;">
+	<img src="gmbr/ris.jpg" height="80px" alt="haris">
+</div>
+
 
 <div class="dv">
 	<p>Be Smart for everyone</p>
 	<a href="panduan.html" id="wr">panduan</a>
-	<a href="" id="wr">lapor admin</a>
-	<a href="" id="wr">tentang kami</a>
+	<a href="lapor.html" id="wr">lapor admin</a>
+	<a href="Tentangkmi.html" id="wr">tentang kami</a>
 </div>
 
 </body>
