--- a/lapor.html
+++ b/lapor.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 
-
 <h1 id="tg">BE SMART</h1>
 <H2 id="tg">Education For Everyone</H2>
 
@@ -20,11 +19,11 @@
 	</LI>
 
 	<li>
-		<a href="contac.html">CONTACT</a>
+		<a href="contact.html">CONTACT</a>
 	</li>
 
 	<li>
-		<a href="">PENCARIAN</a>
+		<a href="pencarian.html">PENCARIAN</a>
 	</li>
 
 	<li>
@@ -56,7 +55,7 @@
 	<p>Be Smart for everyone</p>
 	<a href="panduan.html" id="wr">panduan</a>
 	<a href="lapor.html" id="wr">lapor admin</a>
-	<a href="" id="wr">tentang kami</a>
+	<a href="Tentangkmi.html" id="wr">tentang kami</a>
 </div>
 
 
