--- a/panduan.html
+++ b/panduan.html
@@ -24,7 +24,7 @@
 	</li>
 
 	<li>
-		<a href="">PENCARIAN</a>
+		<a href="pencarian.html">PENCARIAN</a>
 	</li>
 
 	<li>
@@ -60,6 +60,12 @@
    </div>
 </div>
 
+<div class="dv">
+	<p>Be Smart for everyone</p>
+	<a href="panduan.html" id="wr">panduan</a>
+	<a href="lapor.html" id="wr">lapor admin</a>
+	<a href="Tentangkmi.html" id="wr">tentang kami</a>
+</div>
 
 </body>
 </html>
