--- a/pencarian.html
+++ b/pencarian.html
@@ -24,11 +24,11 @@
 	</li>
 
 	<li>
-		<a href="">PENCARIAN</a>
+		<a href="pencarian.html">PENCARIAN</a>
 	</li>
 
 	<li>
-		<a href="pencarian.html">REGISTRASI</a>
+		<a href="">REGISTRASI</a>
 	</li>
 </ul>
 
@@ -125,7 +125,7 @@
 	<p>Be Smart for everyone</p>
 	<a href="panduan.html" id="wr">panduan</a>
 	<a href="lapor.html" id="wr">lapor admin</a>
-	<a href="" id="wr">tentang kami</a>
+	<a href="Tentangkmi.html" id="wr">tentang kami</a>
 </div>
 
 </body>
