--- a/contac.html
+++ b/contac.html
@@ -23,7 +23,7 @@
 	</li>
 
 	<li>
-		<a href="">PENCARIAN</a>
+		<a href="pencarian.html">PENCARIAN</a>
 	</li>
 
 	<li>
@@ -31,14 +31,61 @@
 	</li>
 </ul>
 
+<h2 id="tg">Daftar Para Pembimbing</h2>
+<div>
+<table>
+	<tr>
+		<th><img src="gmbr/pf.png" height="100px"></th>
+		<th  style="width: 100%;">nama<br>
+		pendidikan<br>
+		kontak<br>
+		sosmed<br>
+	</th>
+	</tr>
 
+	<tr>
+		<th><img src="gmbr/pf.png" height="100px"></th>
+		<th  style="width: 100%;">nama<br>
+		pendidikan<br>
+		kontak<br>
+		sosmed<br>
+	</th>
+	</tr>
 
+	<tr>
+		<th><img src="gmbr/pf.png" height="100px"></th>
+		<th  style="width: 100%;">nama<br>
+		pendidikan<br>
+		kontak<br>
+		sosmed<br>
+	</th>
+	</tr>
+
+	<tr>
+		<th><img src="gmbr/pf.png" height="100px"></th>
+		<th  style="width: 100%;">nama<br>
+		pendidikan<br>
+		kontak<br>
+		sosmed<br>
+	</th>
+	</tr>
+
+	<tr>
+		<th><img src="gmbr/pf.png" height="100px"></th>
+		<th  style="width: 100%;">nama<br>
+		pendidikan<br>
+		kontak<br>
+		sosmed<br>
+	</th>
+	</tr>
+</table>
+</div>
 
 <div class="dv">
 	<p>Be Smart for everyone</p>
 	<a href="panduan.html" id="wr">panduan</a>
-	<a href="" id="wr">lapor admin</a>
-	<a href="" id="wr">tentang kami</a>
+	<a href="lapor.html" id="wr">lapor admin</a>
+	<a href="Tentangkmi.html" id="wr">tentang kami</a>
 </div>
 
 </body>
