--- a/list.html
+++ b/list.html
@@ -23,7 +23,7 @@
 	</li>
 
 	<li>
-		<a href="">PENCARIAN</a>
+		<a href="pencarian.html">PENCARIAN</a>
 	</li>
 
 	<li>
@@ -65,8 +65,8 @@
 <div class="dv">
 	<p>Be Smart for everyone</p>
 	<a href="panduan.html" id="wr">panduan</a>
-	<a href="" id="wr">lapor admin</a>
-	<a href="" id="wr">tentang kami</a>
+	<a href="lapor.html" id="wr">lapor admin</a>
+	<a href="Tentangkmi.html" id="wr">tentang kami</a>
 </div>
 
 </body>
