--- a/contac.html
+++ b/contac.html
@@ -33,7 +33,7 @@
 
 <h2 id="tg">Daftar Para Pembimbing</h2>
 <div>
-<table>
+<table align="center">
 	<tr>
 		<th><img src="gmbr/pf.png" height="100px"></th>
 		<th  style="width: 100%;">nama<br>
