--- a/home.html
+++ b/home.html
@@ -35,6 +35,8 @@
 	<h1>Be Smart</h1>
 </div>
 
+<div>
+	
 <div id="nav">
 	<p>PENDIRI</p>
 	Dwisyal<br>
@@ -44,28 +46,30 @@
 	Haris<br>
 </div>
 
-<div id="section" style="width: 400px; ">
+<div id="section" style="width: 450px; ">
 	<h2 id="tg">PEMBERITAHUAN</h2>
 	<p id="tg">Be Smart adalah web berbasis pembelajaran, yang bisa di gunakan baik itu anak kecil maupun orang dewasa.</p>
 	<p id="tg">Pada dasarnya web ini di buat khusus bagi semua orang baik itu orang yang normal ataupun yang tidak normal yang ingin mencari ilmu untuk menambah wawasan.</p>
 </div>
-
 <div id="section">
-	<img src="gmbr/dw.jpg" height="80px" alt="dwisyal">
+<div id="" style="float: left; ">
+	<img src="gmbr/dw.jpg" height="100px" alt="dwisyal">
 </div>
-<div id="section" style="float: right;">
-	<img src="gmbr/ap.jpg" height="80px" alt="apolos">
+<div id="" style="float: left; ">
+	<img src="gmbr/ap.jpg" height="100px" alt="apolos">
 </div>
-<div id="section">
-	<img src="gmbr/uswa.jpg" height="80px" alt="uswatun">
+<div id="">
+	<img src="gmbr/uswa.jpg" height="100px" alt="uswatun">
 </div>
-<div id="section" style="float: right;">
-	<img src="gmbr/da.jpg" height="80px" alt="danang">
+<div id="" style="float:left ;">
+	<img src="gmbr/da.jpg" height="100px" alt="danang">
 </div>
-<div id="section" style="float: right;">
-	<img src="gmbr/ris.jpg" height="80px" alt="haris">
+<div id="" style="float: left;">
+	<img src="gmbr/ris.jpg" height="100px" alt="haris">
+</div>
 </div>
 
+</div>
 
 <div class="dv">
 	<p>Be Smart for everyone</p>
