--- a/list.html
+++ b/list.html
@@ -38,7 +38,15 @@
 		<th><img src="gmbr/tk.png" height="200" width="200"></th>
 		<th width="100%"><a href="" class="tk">Taman Kanak-Kanak</a>
 			<p>mencakup seluruh yang di butuhkan bagi anak-anak usia dini</p>
-		</th>
+			<div class="dropdown">
+				<button class="dropbtn">VIDEO</button>
+				<div class="dropdown-content">
+					<a href="tk_hitung.html">berhitung</a>
+					<a href="">membaca</a>
+				</div>
+			</div>
+				<button><a href="">AUDIO</a></button>
+			</th>
 	</tr>
 	<tr>
 		<th><img src="gmbr/sd.jpg" height="200" width="200"></th>
