--- a/tk_hitung.html
+++ b/tk_hitung.html
@@ -37,15 +37,30 @@
 	<tr>
 		<th><img src="gmbr/d.jpg" width="300" height="300px"></th>
 		<th>
-<video controls="controls">
+			<p>Berhitung Bersama kereta api Bob</p>
+<video controls="controls" width="90%">
 	<source src="gmbr/bth.mp4" type="video/mp4">
 </video>
-<button style="background-color: red; width: 100px"><a href="https://www.youtube.com/channel/UCDVwLvLnrORclfiG_FjBUjQ">Subscribe</a></button>
+<button style="background-color: red; width: 100px;"><a href="https://www.youtube.com/channel/UCDVwLvLnrORclfiG_FjBUjQ">Subscribe</a></button>
 </th>
+</tr>
+<tr>
+	<th><img src="gmbr/d1.jpg" width="300" height="300"></th>
+	<th>
+		<p>Berhitung Dengan Upin&ipin</p>
+		<video controls="controls" width="90%">
+			<source src="gmbr/uni.mp4" type="video/mp4">
+		</video>
+		<button style="background-color: red; width: 100px;">
+			<a href="https://www.youtube.com/channel/UCe58-kNm1eQzkkn3pvupBEg">Subdcribe</a>
+		</button>
+	</th>
 </tr>
 </table>
 
+<button style="padding: 10px;">
 <a href="list.html">KEMBALI</a>
+</button>
 
 <div class="dv">
 	<p>Be Smart for everyone</p>
