--- a/tk_hitung.html
+++ b/tk_hitung.html
@@ -35,7 +35,12 @@
 
 <table align="center">
 	<tr>
-		<th><img src="gmbr/d.jpg" width="300" height="300px"></th>
+		<th><img src="gmbr/d.jpg" width="300" height="300px">
+<p>Kids Tv Indonesia</p>
+<div>Belajar bersama dengan para kartun yang menyenangkan</div>
+		<a href="https://plus.google.com/+KidsTvIndonesia">Google+</a><br>
+		<a href="https://www.facebook.com/Kids-Tv-Indonesia-1818973765013607/">Facebook</a>
+		</th>
 		<th>
 			<p>Berhitung Bersama kereta api Bob</p>
 <video controls="controls" width="90%">
@@ -45,7 +50,11 @@
 </th>
 </tr>
 <tr>
-	<th><img src="gmbr/d1.jpg" width="300" height="300"></th>
+	<th><img src="gmbr/d1.jpg" width="300" height="300">
+		<p>Dedekids</p>
+		<div>Belajar dengan para kartun film anak</div>
+		<a href="https://www.youtube.com/channel/UCe58-kNm1eQzkkn3pvupBEg/featured">Youtube</a>
+	</th>
 	<th>
 		<p>Berhitung Dengan Upin&ipin</p>
 		<video controls="controls" width="90%">
