--- a/list.html
+++ b/list.html
@@ -42,7 +42,7 @@
 				<button class="dropbtn">VIDEO</button>
 				<div class="dropdown-content">
 					<a href="tk_hitung.html">berhitung</a>
-					<a href="">membaca</a>
+					<a href="tk_baca.html">membaca</a>
 				</div>
 			</div>
 				<button><a href="tk_audio.html">AUDIO</a></button>
