--- a/tk_hitung.html
+++ b/tk_hitung.html
@@ -70,6 +70,10 @@
 <button style="padding: 10px;">
 <a href="list.html">KEMBALI</a>
 </button>
+<button style="padding: 10px; float: right;">
+<a href="tk_baca.html">MEMBACA</a>
+</button>
+
 
 <div class="dv">
 	<p>Be Smart for everyone</p>
