--- a/master.html
+++ b/master.html
@@ -45,6 +45,7 @@
 			</div>
 			<button><a href="">Edit Profil</a></button>
 			<button><a href="">Materi</a></button>
+			<button><a href="">Soal Try Out</a></button>
 		</th>
 		</tr>
 </table>
