--- a/member.html
+++ b/member.html
@@ -44,6 +44,7 @@
 			</div>
 			<button><a href="">Edit Profil</a></button>
 			<button><a href="">TRY OUT</a></button>
+			<button><a href="">Nilai</a></button>
 		</th>
 		</tr>
 </table>
