--- a/mas_editprof.html
+++ b/mas_editprof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MEMBER</title>
+	<title>Edit Profil Master</title>
 	<link rel="stylesheet" type="text/css" href="on.css">
 </head>
 <body>
@@ -32,20 +32,19 @@
 	</li>
 </ul>
 
-
-
 <table>
 	<tr>
-		<th><img src="gmbr/pf.png">
+		<th>
+			<img src="gmbr/pf.png">
 			<div>
-				NAMA<br>
-				CONTACT<br>
-				status<br>
+				<button>Ganti gambar</button><br>
+				<input type="text" name="nama" placeholder="nama"><br>
+				<input type="text" name="pendidikan" placeholder="pendidikan"><br>
+				<input type="number" name="number" placeholder="no. hp"><br>
+				<input type="text" name="status" placeholder="status"><br>
+				<input type="submit" name="Ganti" placeholder="Ganti">
+				<input type="reset" name="batal" value="batal">
 			</div>
-			<button><a href="editprof.html">Edit Profil</a></button>
-			<button><a href="">TRY OUT</a></button>
-			<button><a href="">Nilai</a></button>
-			<button><a href="pencarian.html">Materi</a></button>
 		</th>
 		</tr>
 </table>
@@ -56,6 +55,7 @@
 	<a href="lapor.html" id="wr">lapor admin</a>
 	<a href="Tentangkmi.html" id="wr">tentang kami</a>
 </div>
+
 
 
 </body>
