--- a/master.html
+++ b/master.html
@@ -43,8 +43,8 @@
 				CONTACT<br>
 				status<br>
 			</div>
-			<button><a href="">Edit Profil</a></button>
-			<button><a href="">Materi</a></button>
+			<button><a href="mas_editprof.html">Edit Profil</a></button>
+			<button><a href="list.html">Materi</a></button>
 			<button><a href="">Soal Try Out</a></button>
 		</th>
 		</tr>
