--- a/editprof.html
+++ b/editprof.html
@@ -39,7 +39,7 @@
 		<th>
 			<img src="gmbr/pf.png">
 			<div>
-				<button>Ganti gambar</button><br>
+				<input type="file" name="picture"><br>
 				<input type="text" name="nama" placeholder="nama"><br>
 				<input type="number" name="number" placeholder="no. hp"><br>
 				<input type="text" name="status" placeholder="status"><br>
