--- a/mas_editprof.html
+++ b/mas_editprof.html
@@ -37,7 +37,7 @@
 		<th>
 			<img src="gmbr/pf.png">
 			<div>
-				<button>Ganti gambar</button><br>
+				<input type="file" name="picture"><br>
 				<input type="text" name="nama" placeholder="nama"><br>
 				<input type="text" name="pendidikan" placeholder="pendidikan"><br>
 				<input type="number" name="number" placeholder="no. hp"><br>
