--- a/sma_penjas.html
+++ b/sma_penjas.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lapor Admin</title>
+	<title>penjas</title>
 	<link rel="stylesheet" type="text/css" href="on.css">
 </head>
 <body>
 
-<h1 id="tg">BE SMART</h1>
+
+	<h1 id="tg">BE SMART</h1>
 <H2 id="tg">Education For Everyone</H2>
 
 <ul>
@@ -19,7 +20,7 @@
 	</LI>
 
 	<li>
-		<a href="contact.html">CONTACT</a>
+		<a href="contac.html">CONTACT</a>
 	</li>
 
 	<li>
@@ -31,25 +32,17 @@
 	</li>
 </ul>
 
-<div class="pd" id="tg">
- <form id="formKomentar">
-  	<div>
-  	 <input type="text" name="nama" placeholder="Nama" />
-  	</div>
- 
-  	<div>
-  	 <input type="text" name="email" placeholder="Email" />
-    </div>
- 
-  	<div>
-  	 <textarea name="komentar" rows="10" placeholder="lapor"></textarea>
-  	</div>
- 
-  	<div>
-  	  <input type="button" value="KIRIM" style="width: 200px" onclick="alert('TERKIRIM')" />
-  	</div>
-  </form>
-</div>
+<table>
+<tr>
+		<th>3</th>
+		<th><p>Materi Pendidikan Jasmani dan Kesehatan SMA kelas XII</p></th>
+		<th><a href="fp/Chapter 3 Have a Look at Life Underwater.doc">Materi Pendidikan Jasmani dan Kesehatan SMA kelas XII</a></th>
+	</tr>
+</table>
+
+<button style="padding: 10px;">
+<a href="pencarian.html">KEMBALI</a>
+</button>
 
 <div class="dv">
 	<p>Be Smart for everyone</p>
@@ -57,7 +50,6 @@
 	<a href="lapor.html" id="wr">lapor admin</a>
 	<a href="Tentangkmi.html" id="wr">tentang kami</a>
 </div>
-
 
 </body>
 </html>
