--- a/pencarian.html
+++ b/pencarian.html
@@ -53,7 +53,7 @@
   <div class="dropdown-content">
     <a href="#">SD</a>
     <a href="#">SMP</a>
-    <a href="#">SMA</a>
+    <a href="sma_indonesia.html">SMA</a>
   </div>
 </div>
 <div class="dropdown">
@@ -61,7 +61,7 @@
   <div class="dropdown-content">
     <a href="#">SD</a>
     <a href="#">SMP</a>
-    <a href="#">SMA</a>
+    <a href="sma_inggris.html">SMA</a>
   </div>
 </div>
 <div class="dropdown">
@@ -69,7 +69,7 @@
   <div class="dropdown-content">
     <a href="#">SD</a>
     <a href="#">SMP</a>
-    <a href="#">SMA</a>
+    <a href="sma_penjas.html">SMA</a>
   </div>
 </div>
 <div class="dropdown">
