--- a/sd_agama.html
+++ b/sd_agama.html
@@ -62,6 +62,10 @@
 <a href="pencarian.html">KEMBALI</a>
 </button>
 
+<button style="padding: 10px; float: right;">
+<a href="smp_agama.html">SMP</a>
+</button>
+
 <div class="dv">
 	<p>Be Smart for everyone</p>
 	<a href="panduan.html" id="wr">panduan</a>
