--- a/sma_agama.html
+++ b/sma_agama.html
@@ -57,7 +57,11 @@
 </table>
 
 <button style="padding: 10px;">
-<a href="pencarian.html">KEMBALI</a>
+<a href="smp_agama.html">SMP</a>
+</button>
+
+<button style="padding: 10px; float: right;">
+<a href="sd_agama.html">SD</a>
 </button>
 
 <div class="dv">
