--- a/smp_agama.html
+++ b/smp_agama.html
@@ -58,7 +58,11 @@
 </table>
 
 <button style="padding: 10px;">
-<a href="pencarian.html">KEMBALI</a>
+<a href="sd_agama.html">SD</a>
+</button>
+
+<button style="padding: 10px; float: right;">
+<a href="sma_agama.html">SMA</a>
 </button>
 
 <div class="dv">
