--- a/pencarian.html
+++ b/pencarian.html
@@ -43,9 +43,9 @@
 <div class="dropdown">
   <button class="dropbtn">MATEMATIKA</button>
   <div class="dropdown-content">
-    <a href="#">SD</a>
-    <a href="#">SMP</a>
-    <a href="#">SMA</a>
+    <a href="MATEMATIKA_SD.html">SD</a>
+    <a href="MATEMATIKA_SMP.html">SMP</a>
+    <a href="MATEMATIKA_SMA.html">SMA</a>
   </div>
 </div>
 <div class="dropdown">
