--- a/pencarian.html
+++ b/pencarian.html
@@ -75,9 +75,9 @@
 <div class="dropdown">
   <button class="dropbtn">AGAMA</button>
   <div class="dropdown-content">
-    <a href="#">SD</a>
-    <a href="#">SMP</a>
-    <a href="#">SMA</a>
+    <a href="sd_agama.html">SD</a>
+    <a href="smp_agama.html">SMP</a>
+    <a href="sma_agama.html">SMA</a>
   </div>
 </div>
 <div class="dropdown">
