--- a/smp_agama.html
+++ b/smp_agama.html
@@ -35,12 +35,20 @@
 <table>
 
 		<tr>
+			<th>MASTER</th>
 		<th>PENDIDIKAN</th>
-		<th>KELAS</th>
 		<TH>JUDUL</TH>
 		<TH>DOWNLOAD</TH>
 	</tr>
 <tr>
+	<th rowspan="3"><img src="gmbr/uswa.jpg" class="bulat">
+		<div>
+			uswatun<br>
+			s1 informatika<br>
+			08920339494<br>
+			ig@uswahkh21
+		</div>
+	</th>
 		<th rowspan="3">agama</th>
 		<th><p>Rangkuman Materi Pelajaran PAI Kelas 7 SMP</p></th>
 		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 7 SMP.doc">Rangkuman Materi Pelajaran PAI Kelas 7 SMP</a></th>
