--- a/sd_agama.html
+++ b/sd_agama.html
@@ -34,12 +34,19 @@
 
 <table>
 		<tr>
+			<th>MASTER</th>
 		<th>PENDIDIKAN</th>
-		<th>KELAS</th>
 		<TH>JUDUL</TH>
 		<TH>DOWNLOAD</TH>
 	</tr>
 <tr>
+	<th rowspan="3"><img src="gmbr/uswa.jpg" class="bulat">
+		<div>
+			uswatun<br>
+			s1 informatika<br>
+			08920339494<br>
+			ig@uswahkh21
+		</div></th>
 		<th rowspan="3">agama</th>
 		<th><p>Rangkuman Pelajaran Agama Islam Kelas 4 SD</p></th>
 		<th><a href="PAI/Rangkuman Pelajaran Agama Islam Kelas 4 SD.doc">Rangkuman Pelajaran Agama Islam Kelas 4 SD</a></th>
