--- a/sd_agama.html
+++ b/sd_agama.html
@@ -48,19 +48,19 @@
 			ig@uswahkh21
 		</div></th>
 		<th rowspan="3">agama</th>
-		<th><p>Rangkuman Pelajaran Agama Islam Kelas 4 SD</p></th>
+		<th><a href="PAI/Rangkuman Pelajaran Agama Islam Kelas 4 SD.htm">Rangkuman Pelajaran Agama Islam Kelas 4 SD</a></th>
 		<th><a href="PAI/Rangkuman Pelajaran Agama Islam Kelas 4 SD.doc">Rangkuman Pelajaran Agama Islam Kelas 4 SD</a></th>
 	</tr>
 
 <tr>
 		
-		<th><p>Rangkuman Pelajaran Agama Islam Kelas 5 SD</p></th>
+		<th><a href="PAI/Rangkuman Pelajaran Agama Islam Kelas 5 SD.htm">Rangkuman Pelajaran Agama Islam Kelas 5 SD</a></th>
 		<th><a href="PAI/Rangkuman Pelajaran Agama Islam Kelas 5 SD.doc">Rangkuman Pelajaran Agama Islam Kelas 5 SD</a></th>
 	</tr>
 
 <tr>
 		
-		<th><p>Rangkuman Pelajaran Agama Islam Kelas 6 SD</p></th>
+		<th><a href="PAI/Rangkuman Pelajaran Agama Islam Kelas 6 SD.htm">Rangkuman Pelajaran Agama Islam Kelas 6 SD</a></th>
 		<th><a href="PAI/Rangkuman Pelajaran Agama Islam Kelas 6 SD.doc">Rangkuman Pelajaran Agama Islam Kelas 6 SD</a></th>
 	</tr>
 </table>
