--- a/smp_agama.html
+++ b/smp_agama.html
@@ -50,17 +50,17 @@
 		</div>
 	</th>
 		<th rowspan="3">agama</th>
-		<th><p>Rangkuman Materi Pelajaran PAI Kelas 7 SMP</p></th>
+		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 7 SMP.htm">Rangkuman Materi Pelajaran PAI Kelas 7 SMP</a></th>
 		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 7 SMP.doc">Rangkuman Materi Pelajaran PAI Kelas 7 SMP</a></th>
 	</tr>
 
 <tr>
-		<th><p>Rangkuman Materi Pelajaran PAI Kelas 8 SMP</p></th>
+		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 8 SMP.htm">Rangkuman Materi Pelajaran PAI Kelas 8 SMP</a></th>
 		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 8 SMP.doc">Rangkuman Materi Pelajaran PAI Kelas 8 SMP</a></th>
 	</tr>
 
 <tr>
-		<th><p>Rangkuman Materi Pelajaran PAI Kelas 9 SMP</p></th>
+		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 9 SMP.htm">Rangkuman Materi Pelajaran PAI Kelas 9 SMP</a></th>
 		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 9 SMP.doc">Rangkuman Materi Pelajaran PAI Kelas 9 SMP</a></th>
 	</tr>
 </table>
