--- a/sma_agama.html
+++ b/sma_agama.html
@@ -49,17 +49,17 @@
 		</div>
 		</th>
 		<th rowspan="3">agama</th>
-		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 10 SMA.htm">Rangkuman Materi Pelajaran PAI Kelas 10 SMA</a></th>
+		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 10 SMA.htm" target="_blank">Rangkuman Materi Pelajaran PAI Kelas 10 SMA</a></th>
 		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 10 SMA.doc">Rangkuman Materi Pelajaran PAI Kelas 10 SMA</a></th>
 	</tr>
 
 <tr>
-		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 11 SMA.htm">Rangkuman Materi Pelajaran PAI Kelas 11 SMA</a></th>
+		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 11 SMA.htm" target="_blank">Rangkuman Materi Pelajaran PAI Kelas 11 SMA</a></th>
 		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 11 SMA.doc">Rangkuman Materi Pelajaran PAI Kelas 11 SMA</a></th>
 	</tr>
 
 <tr>
-		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 12 SMA.htm">Rangkuman Materi Pelajaran PAI Kelas 12 SMA</a></th>
+		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 12 SMA.htm" target="_blank">Rangkuman Materi Pelajaran PAI Kelas 12 SMA</a></th>
 		<th><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 12 SMA.doc">Rangkuman Materi Pelajaran PAI Kelas 12 SMA</a></th>
 	</tr>
 </table>
