--- a/BAHASA INDONESIA_SD.html
+++ b/BAHASA INDONESIA_SD.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi BAHASA INDONESIA SD</p></th>
+		<th><a href="materi IPA/Materi BAHASA INDONESIA SD.htm" target="_blank">Materi BAHASA INDONESIA SD</a></th>
 		<th><a href="materi IPA/Materi BAHASA INDONESIA SD.doc">Materi BAHASA INDONESIA SD</a></th>
 	</tr>
 </table>
