--- a/BAHASA INDONESIA_SMP.html
+++ b/BAHASA INDONESIA_SMP.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi BAHASA INDONESIA SMP</p></th>
+		<th><a href="materi IPA/Materi BAHASA INDONESIA SMP.htm" target="_blank">Materi BAHASA INDONESIA SMP</a></th>
 		<th><a href="materi IPA/Materi BAHASA INDONESIA SMP.doc">Materi BAHASA INDONESIA SMP</a></th>
 	</tr>
 </table>
