--- a/IPA_SD.html
+++ b/IPA_SD.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>materi IPA SD</p></th>
+		<th><a href="materi IPA/materi IPA SD.htm" target="_blank">materi IPA SD</a></th>
 		<th><a href="materi IPA/materi IPA SD.doc">materi IPA SD</a></th>
 	</tr>
 </table>
