--- a/IPA_SMA.html
+++ b/IPA_SMA.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi IPA SMA</p></th>
+		<th><a href="materi IPA/Materi IPA SMA.htm" target="_blank">Materi IPA SMA</th>
 		<th><a href="materi IPA/Materi IPA SMA.doc">Materi IPA SMA</a></th>
 	</tr>
 </table>
