--- a/IPA_SMP.html
+++ b/IPA_SMP.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi IPA SMP</p></th>
+		<th><a href="materi IPA/Materi IPA SMP.htm" target="_blank">Materi IPA SMP</th>
 		<th><a href="materi IPA/Materi IPA SMP.doc">Materi IPA SMP</a></th>
 	</tr>
 </table>
