--- a/IPS_SD.html
+++ b/IPS_SD.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi IPS SD/p></th>
+		<th><a href="materi IPA/Materi IPS SD.htm" target="_blank">Materi IPS SD</th>
 		<th><a href="materi IPA/Materi IPS SD.doc">Materi IPS SD</a></th>
 	</tr>
 </table>
