--- a/IPS_SMP.html
+++ b/IPS_SMP.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi IPS SMP</p></th>
+		<th><a href="materi IPA/Materi IPS SMP.htm" target="_blank">Materi IPS SMP</th>
 		<th><a href="materi IPA/Materi IPS SMP.doc">Materi IPS SMP</a></th>
 	</tr>
 </table>
