--- a/MATEMATIKA_SD.html
+++ b/MATEMATIKA_SD.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi MATEMATIKA SD</p></th>
+		<th><a href="materi IPA/Materi MATEMATIKA SD.htm" target="_blank">Materi MATEMATIKA SD</th>
 		<th><a href="materi IPA/Materi MATEMATIKA SD.doc">Materi MATEMATIKA SD</a></th>
 	</tr>
 </table>
