--- a/MATEMATIKA_SMA.html
+++ b/MATEMATIKA_SMA.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi MATEMATIKA SMA</p></th>
+		<th><a href="materi IPA/Materi MATEMATIKA SMA.htm" target="_blank">Materi MATEMATIKA SMA</th>
 		<th><a href="materi IPA/Materi MATEMATIKA SMA.doc">Materi MATEMATIKA SMA</a></th>
 	</tr>
 </table>
