--- a/PENJAS_SD.html
+++ b/PENJAS_SD.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi PENJAS SD</p></th>
+		<th><a href="materi IPA/Materi PENJAS SD.htm" target="_blank">Materi PENJAS SD</th>
 		<th><a href="materi IPA/Materi PENJAS SD.doc">Materi PENJAS SD</a></th>
 	</tr>
 </table>
