--- a/PPKN_SD.html
+++ b/PPKN_SD.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi PPKN SD</p></th>
+		<th><a href="materi IPA/Materi PPKN SD.htm" target="_blank">Materi PPKN SD</th>
 		<th><a href="materi IPA/Materi PPKN SD.doc">Materi PPKN SD</a></th>
 	</tr>
 </table>
