--- a/PPKN_SMA.html
+++ b/PPKN_SMA.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi PPKN SMA</p></th>
+		<th><a href="materi IPA/Materi PPKN SMA.htm" target="_blank">Materi PPKN SMA</th>
 		<th><a href="materi IPA/Materi PPKN SMA.doc">Materi PPKN SMA</a></th>
 	</tr>
 </table>
