--- a/PPKN_SMP.html
+++ b/PPKN_SMP.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi PPKN SMP</p></th>
+		<th><a href="materi IPA/Materi PPKN SMP.htm" target="_blank">Materi PPKN SMP</th>
 		<th><a href="materi IPA/Materi PPKN SMP.doc">Materi PPKN SMP</a></th>
 	</tr>
 </table>
