--- a/SENIBUDAYA_SD.html
+++ b/SENIBUDAYA_SD.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi SENI BUDAYA SD</p></th>
+		<th><a href="materi IPA/Materi SENI BUDAYA SD.htm" target="_blank">Materi SENI BUDAYA SD</th>
 		<th><a href="materi IPA/Materi SENI BUDAYA SD.doc">Materi SENI BUDAYA SD</a></th>
 	</tr>
 </table>
