--- a/SENIBUDAYA_SMA.html
+++ b/SENIBUDAYA_SMA.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi SENI BUDAYA SMA</p></th>
+		<th><a href="materi IPA/Materi SENI BUDAYA SMA.htm" target="_blank">Materi SENI BUDAYA SMA</th>
 		<th><a href="materi IPA/Materi SENI BUDAYA SMA.doc">Materi SENI BUDAYA SMA</a></th>
 	</tr>
 </table>
