--- a/SENIBUDAYA_SMP.html
+++ b/SENIBUDAYA_SMP.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi SENI BUDAYA SMP</p></th>
+		<th><a href="materi IPA/Materi SENI BUDAYA SMP.htm" target="_blank">Materi SENI BUDAYA SMP</th>
 		<th><a href="materi IPA/Materi SENI BUDAYA SMP.doc">Materi SENI BUDAYA SMP</a></th>
 	</tr>
 </table>
