--- a/TIK_SMA.html
+++ b/TIK_SMA.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi TIK SMA</p></th>
+		<th><a href="materi IPA/Materi TIK SMA.htm" target="_blank">Materi TIK SMA</th>
 		<th><a href="materi IPA/Materi TIK SMA.doc">Materi TIK SMA</a></th>
 	</tr>
 </table>
