--- a/TIK_SMP.html
+++ b/TIK_SMP.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi TIK SMP</p></th>
+		<th><a href="materi IPA/Materi TIK SMP.htm" target="_blank">Materi TIK SMP</th>
 		<th><a href="materi IPA/Materi TIK SMP.doc">Materi TIK SMP</a></th>
 	</tr>
 </table>
