--- a/MATEMATIKA_SMP.html
+++ b/MATEMATIKA_SMP.html
@@ -35,7 +35,7 @@
 <table>
 <tr>
 		<th>3</th>
-		<th><p>Materi MATEMATIKA SMP</p></th>
+		<th><a href="materi IPA/Materi MATEMATIKA SMP.htm" target="_blank">Materi MATEMATIKA SMP</th>
 		<th><a href="materi IPA/Materi MATEMATIKA SMP.doc">Materi MATEMATIKA SMP</a></th>
 	</tr>
 </table>
