--- a/panduan.html
+++ b/panduan.html
@@ -44,10 +44,10 @@
         </div>
    </div>
  <div>
-   	<p>Cara Registrasi Member</p>
+   	<p>Cara Registrasi</p>
         <a href="#show"class="show">[Tampilkan]</a>
         <a href="#hide"class="hide">/ [Sembunyikan]</a>
-        <div id="cont">
+        <div id="cont">Jika anda member baru anda dapat melakukannya dengan mendaftarkan Email anda atau akun Facebook anda.
         	
         </div>
         <div>
