--- a/list.html
+++ b/list.html
@@ -38,14 +38,10 @@
 		<th><img src="gmbr/tk.png" height="200" width="200"></th>
 		<th width="100%"><a href="" class="tk">Taman Kanak-Kanak</a>
 			<p>mencakup seluruh yang di butuhkan bagi anak-anak usia dini</p>
-			<div class="dropdown">
-				<button class="dropbtn">VIDEO</button>
-				<div class="dropdown-content">
-					<a href="tk_hitung.html">berhitung</a>
-					<a href="tk_baca.html">membaca</a>
-				</div>
+			<div>
+				<button><a href="tk_hitung.html">BERHITUNG</a></button>
+				<button><a href="tk_baca.html">MEMBACA</a></button>
 			</div>
-				<button><a href="tk_audio.html">AUDIO</a></button>
 			</th>
 	</tr>
 	<tr>
@@ -53,12 +49,35 @@
 		<th width="100%">
 			<a href="" class="tk">Sekolah Dasar</a>
 			<p>seluruh mata pelajaran yang akan di sesuaikan dengan sekolah dasar</p>
+			<div>
+				<button><a href="MATEMATILA_SD.html">MATEMATIKA</a></button>
+				<button><a href="BAHASA INDONESIA_SD.html">BAHASA INDONESIA</a></button>
+				<button><a href="#">BAHASA INGGRIS</a></button>
+				<button><a href="PENJAS_SD.html">PENJAS</a></button>
+				<button><a href="sd_agama.html">AGAMA</a></button>
+				<button><a href="IPA_SD.html">IPA</a></button>
+				<button><a href="IPS_SD.html">IPS</a></button>
+				<button><a href="SENIBUDAYA_SD.html">SENIBUDAYA</a></button>
+				<button><a href="PPKN_SD.html">PPKN</a></button>
+			</div>
 		</th>
 	</tr>
 	<tr>
 		<th><img src="gmbr/smp.png" height="200" width="200"></th>
 		<th width="100%"><a href="" class="tk">Sekolah Menengah Pertama</a>
 			<p>seluruh mata pelajaran yang akan di sesuaikan dengan SMP</p>
+				<div>
+				<button><a href="MATEMATILA_SMP.html">MATEMATIKA</a></button>
+				<button><a href="BAHASA INDONESIA_SMP.html">BAHASA INDONESIA</a></button>
+				<button><a href="#">BAHASA INGGRIS</a></button>
+				<button><a href="PENJAS_SMP.html">PENJAS</a></button>
+				<button><a href="smp_agama.html">AGAMA</a></button>
+				<button><a href="IPA_SMP.html">IPA</a></button>
+				<button><a href="IPS_SMP.html">IPS</a></button>
+				<button><a href="SENIBUDAYA_SMP.html">SENIBUDAYA</a></button>
+				<button><a href="TIK_SMP.html">TIK</a></button>
+				<button><a href="PPKN_SMP.html">PPKN</a></button>
+			</div>
 		</th>
 	</tr>
 	<tr>
@@ -66,6 +85,18 @@
 		<th width="100%">
 			<a href="" class="tk">Sekolah Menengah Atas</a>
 			<p>seluruh mata pelajaran yang akan di sesuaikan dengan SMA</p>
+			<div>
+				<button><a href="MATEMATILA_SMA.html">MATEMATIKA</a></button>
+				<button><a href="sma_indonesia.html">BAHASA INDONESIA</a></button>
+				<button><a href="sma_inggris">BAHASA INGGRIS</a></button>
+				<button><a href="sma_penjas.html">PENJAS</a></button>
+				<button><a href="smp_agama.html">AGAMA</a></button>
+				<button><a href="IPA_SMA.html">IPA</a></button>
+				<button><a href="IPS_SMA.html">IPS</a></button>
+				<button><a href="SENIBUDAYA_SMA.html">SENIBUDAYA</a></button>
+				<button><a href="TIK_SMA.html">TIK</a></button>
+				<button><a href="PPKN_SMA.html">PPKN</a></button>
+			</div>
 		</th>
 	</tr>
 </table>
