--- a/master.html
+++ b/master.html
@@ -44,7 +44,7 @@
 				status<br>
 			</div>
 			<button><a href="mas_editprof.html">Edit Profil</a></button>
-			<button><a href="list.html">Materi</a></button>
+			<button><a href="member_materi.html">Upload Materi</a></button>
 			<button><a href="">Soal Try Out</a></button>
 		</th>
 		</tr>
