--- a/member_materi.html
+++ b/member_materi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MEMBER</title>
+	<title>Materi Member</title>
 	<link rel="stylesheet" type="text/css" href="on.css">
 </head>
 <body>
@@ -32,23 +32,11 @@
 	</li>
 </ul>
 
-
-
-<table>
-	<tr>
-		<th><img src="gmbr/pf.png">
-			<div>
-				NAMA<br>
-				CONTACT<br>
-				status<br>
-			</div>
-			<button><a href="editprof.html">Edit Profil</a></button>
-			<button><a href="">TRY OUT</a></button>
-			<button><a href="">Nilai</a></button>
-			<button><a href="list.html">Materi</a></button>
-		</th>
-		</tr>
-</table>
+<h4 id="tg">Masukkan materi anda</h4>
+<div align="center">
+<input type="file" name="materi"><br>
+<input type="submit" name="submit" placeholder="KIRIM">
+</div>
 
 <div class="dv">
 	<p>Be Smart for everyone</p>
