--- a/nilai.html
+++ b/nilai.html
@@ -18,6 +18,7 @@
   <dd class="percentage percentage-60"><span class="text">TIK: 60%</span></dd>
   <dd class="percentage percentage-80"><span class="text">PENJAS 80%</span></dd>
     <dd class="percentage percentage-79"><span class="text">AGAMA : 79%</span></dd>
+    <dd class="percentage percentage-82"><span class="text">BAHASA INDONESIA : 82%</span></dd>
 </dl>
 
 <h2 align="center">Statistik</h2>
@@ -64,6 +65,9 @@ var chart = AmCharts.makeChart( "chartdiv", {
   }, {
     "country": "penjas",
     "litres": 80
+  }, {
+    "country": "bahasa indonesia",
+    "litres": 82
   } ],
   "valueAxes": [ {
     "axisTitleOffset": 20,
