--- a/member.html
+++ b/member.html
@@ -44,8 +44,8 @@
 			</div>
 			<button><a href="editprof.html">Edit Profil</a></button>
 			<button><a href="">TRY OUT</a></button>
-			<button><a href="">Nilai</a></button>
-			<button><a href="list.html">Materi</a></button>
+			<button><a href="nilai.html">Nilai</a></button>
+			<button><a href="pencarian.html">Materi</a></button>
 		</th>
 		</tr>
 </table>
