--- a/nilai.html
+++ b/nilai.html
@@ -7,24 +7,14 @@
 </head>
 <body>
 
-<dl>
-  <dt>
-    Nilai yang di peroleh
-  </dt>
-  <dd class="percentage percentage-60"><span class="text">MATEMATIKA: 60%</span></dd>
-  <dd class="percentage percentage-49"><span class="text">BAHASA INGGRIS: 49%</span></dd>
-  <dd class="percentage percentage-70"><span class="text">IPA: 70%</span></dd>
-  <dd class="percentage percentage-73"><span class="text">IPS: 73%</span></dd>
-  <dd class="percentage percentage-60"><span class="text">TIK: 60%</span></dd>
-  <dd class="percentage percentage-80"><span class="text">PENJAS 80%</span></dd>
-    <dd class="percentage percentage-79"><span class="text">AGAMA : 79%</span></dd>
-    <dd class="percentage percentage-82"><span class="text">BAHASA INDONESIA : 82%</span></dd>
-</dl>
+<div id="header">
+<h1>HASIL</h1>
+</div>
 
 <h2 align="center">Statistik</h2>
 
 <div>
-	<!-- Styles -->
+  <!-- Styles -->
 <style>
 #chartdiv {
   width: 100%;
@@ -90,6 +80,33 @@ var chart = AmCharts.makeChart( "chartdiv", {
 
 <!-- HTML -->
 <div id="chartdiv"></div>
+</div>
+
+
+
+<dl>
+  <dt>
+    Nilai yang di peroleh
+  </dt>
+  <dd class="percentage percentage-60"><span class="text">MATEMATIKA: 60%</span></dd>
+  <dd class="percentage percentage-49"><span class="text">BAHASA INGGRIS: 49%</span></dd>
+  <dd class="percentage percentage-70"><span class="text">IPA: 70%</span></dd>
+  <dd class="percentage percentage-73"><span class="text">IPS: 73%</span></dd>
+  <dd class="percentage percentage-60"><span class="text">TIK: 60%</span></dd>
+  <dd class="percentage percentage-80"><span class="text">PENJAS 80%</span></dd>
+    <dd class="percentage percentage-79"><span class="text">AGAMA : 79%</span></dd>
+    <dd class="percentage percentage-82"><span class="text">BAHASA INDONESIA : 82%</span></dd>
+</dl>
+
+<div id="tg">
+  <button><a href="home.html">HOME</a></button>
+</div>
+
+<div class="dv">
+  <p>Be Smart for everyone</p>
+  <a href="panduan.html" id="wr">panduan</a>
+  <a href="lapor.html" id="wr">lapor admin</a>
+  <a href="Tentangkmi.html" id="wr">tentang kami</a>
 </div>
 
 </body>
