--- a/contac.html
+++ b/contac.html
@@ -35,11 +35,12 @@
 <div>
 <table align="center">
 	<tr>
-		<th><img src="gmbr/pf.png" height="100px"></th>
-		<th  style="width: 100%;">nama<br>
-		pendidikan<br>
-		kontak<br>
-		sosmed<br>
+		<th><img src="gmbr/ris.jpg" class="bulat"></th>
+		<th  style="width: 100%;"><p>Harist<br>
+		S1 Informatika<br>
+		08132943211<br>
+		risca.gumilang@students.amikom.ac.id<br>
+	</p>
 	</th>
 	</tr>
 
