--- a/pencarian.html
+++ b/pencarian.html
@@ -121,6 +121,17 @@
   </div>
 </div>
 
+
+<table>
+  <tr>
+    <th style="width: 70%;">Mata Pelajaran</th>
+    <th style="width: 70%;">Kelas</th>
+  </tr>
+  <tr>
+    <td></td>
+  </tr>
+</table>
+
 <div class="dv">
 	<p>Be Smart for everyone</p>
 	<a href="panduan.html" id="wr">panduan</a>
